# AVS-System

./: .gitignore  CONTROL_PAGE_IMPLEMENTATION.md  CONTROL_PAGE_MANIFEST.md  CONTROL_PAGE_QUICK_START.md  GEMINI.md  README.md  SimpleRobot_Overview.md  docker-compose.keepalive.yml  docker-compose.prod.yml  docker-compose.prod.yml.bak  docker-compose.prod.yml.bak.2026-06-20_114933  docker-compose.yml  requirements.txt  run_avs_dashboard.sh  test.md  test.py
SimpleRobot/: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  test.md
SimpleRobot/avs_dashboard_system/: package.xml
SimpleRobot/avs_dashboard_system/avs_dashboard_system/: controller_supervisor_control_node.py  experiment_analyzer_control_node.py  gazebo_manager_control_node.py  process_manager_control_node.py
SimpleRobot/avs_dashboard_system/config/: controllers.yaml  dashboard.yaml  gazebo.yaml
SimpleRobot/avs_dashboard_system/scripts/: docker_entrypoint.sh  install_and_build.sh
SimpleRobot/avs_dashboard_system/web/: vite.config.js
SimpleRobot/avs_dashboard_system/web/src/: App.jsx
SimpleRobot/avs_dashboard_system/web/src/components/Charts/: RealtimeChart.jsx
SimpleRobot/avs_dashboard_system/web/src/components/Common/: EmergencyStop.jsx
SimpleRobot/avs_dashboard_system/web/src/components/Layout/: Layout.jsx
SimpleRobot/avs_dashboard_system/web/src/pages/: ManualControl.jsx  NodeManager.jsx  Overview.jsx
SimpleRobot/avs_dashboard_system/web/src/services/: api.js  websocket.js
SimpleRobot/config/: calibration.json
SimpleRobot/docker/: Dockerfile
SimpleRobot/docs/: AI_optimize_readme.md  applied_optimization_methods.md  decision_sys.md  decision_sys_implementation_plan.md  deployment_guide.md  fps_latency_implementation_plan.md  fps_latency_measurement.md  part2_section1_segmentation_report.md  part2_section3_homography_report.md  part2_section5_least_squares_curve_fitting_report.md  part3_section1.md  part3_section10.md  part3_section2.md  part3_section3.md  part3_section4.md  part3_section5.md  part3_section6.md  part3_section7.md  part3_section8.md  part3_section9.md  phan2_muc2_co_so_ly_thuyet_luong_hoa_va_toi_uu_suy_luan.md  phan2_muc4_trich_xuat_centerline_tu_polygon_lan.md  phan2_muc6_suy_ra_tham_so_hinh_hoc_dau_ra.md  phan2_muc7_co_so_ly_thuyet_kien_truc_ros2_va_xu_ly_phan_tan.md  pixel_to_world_plan.md  route_intent_dashboard_implementation_plan.md  system_report.md  trajectory_planning_memory_implementation_plan.md  trajectory_planning_memory_proposal.md
SimpleRobot/models/best_ncnn_model/: metadata.yaml  model-mixed.table  model-opt.param  model.ncnn.param  model.table  model_ncnn.py
SimpleRobot/models/best_ncnn_model_int8/: model.ncnn.param
SimpleRobot/ros2_ws/install_host/: local_setup.sh  setup.sh
SimpleRobot/ros2_ws/install_user/: local_setup.sh  setup.sh
SimpleRobot/ros2_ws/log_host/: latest_build
SimpleRobot/ros2_ws/log_user/: latest_build
SimpleRobot/ros2_ws/src/avs_controlsystem/: package.xml  setup.py
SimpleRobot/ros2_ws/src/avs_controlsystem/avs_controlsystem/: drive_record_node.py  lane_follow_controller_node.py  lane_parser_node.py  lidar_avoidance_node.py  pur_persuit_mainlane_following.py  pur_persuit_pd_mainlane_following_logger.py  pur_persuit_pd_mainlane_video_logger.py  safe_error_cmdvel_node.py  smooth_lane_lidar_follower_node.py
SimpleRobot/ros2_ws/src/avs_controlsystem/launch/: avs_lane_follow.launch.py  simplerobot_lane_lidar_demo.launch.py  simplerobot_lidar_demo.launch.py
SimpleRobot/ros2_ws/src/avs_controlsystem/rviz/: lidar_avoidance_view.rviz
SimpleRobot/scratch/: analyze_graph.py  check_table.py  test_inference.py  test_ncnn_headless.py
SimpleRobot/scripts/: export_ncnn.py  reexport_and_quantize.py
SimpleRobot/skills/labeling_SKILL/: SKILL.md
SimpleRobot/test/: calibration_images.txt  extract_calibration.py
SimpleRobot/test/decision_system/: decision_harness.py  test_phase11_pipeline.py  test_phase1_to_phase5_contract.py
SimpleRobot/web_dashboard/backend/: main.py
avs_dashboard_system/: README.md  setup.cfg  setup.py
avs_dashboard_system/avs_dashboard_system/: __init__.py  cmd_vel_mux_control_node.py  dashboard_api_control_node.py  experiment_recorder_control_node.py  telemetry_aggregator_control_node.py  utils.py
avs_dashboard_system/config/: experiment_metrics.yaml  processes.yaml
avs_dashboard_system/launch/: avs_dashboard.launch.py
avs_dashboard_system/resource/: avs_dashboard_system
avs_dashboard_system/scripts/: start_avs_dashboard.sh  stop_avs_dashboard.sh  test_ws_server.py
avs_dashboard_system/web/: index.html  package-lock.json  package.json
config/: calibration.json  config.json
coordinatesPID/: README.md  config.py  controller.py  main.py  robot.py  simulator.py
docker/: Dockerfile  entrypoint.sh
docs/: OVERVIEW.md  avs_controlsystem_control.md  deployment_guide.md  esp32_controller_plan.md  homography_implementation_plan.md  homography_theory.md  pure_pursuit_guide.md  unified_control_concept.md
models/best_ncnn_model/: metadata.yaml  model_ncnn.py
models/yolo26-best_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
models/yolo26-best_ncnn_model_int8/: model.ncnn.param  model.ncnn.table
ncnn/lib/: libncnn.so.1
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/log_old/: latest_build
ros2_ws/src/avs_perception/: CMakeLists.txt  package.xml
ros2_ws/src/avs_perception/include/avs_perception/: yolo26_seg.hpp
ros2_ws/src/avs_perception/launch/: perception.launch.py
ros2_ws/src/avs_perception/src/: cmdvel_from_control_error_node.cpp.disabled  control_node.cpp  ipm_transform_node.cpp  ncnn_inference_node.cpp  pure_pursuit_node.cpp  pure_pursuit_node.cpp.disabled  video_publisher_node.cpp  video_test_node.cpp  yolo26_seg.cpp
scripts/: deploy_to_pi.sh  export_ncnn.py
skills/camera_SKILL/: SKILL.md
skills/data_transport_SKILL/: SKILL.md
skills/docker_SKILL/: SKILL.md
web_dashboard/: test_websocket.py
web_dashboard/backend/: main.py
web_dashboard/frontend/: app.js  index.html  style.css
(+199 files in other folders)
