<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avs_dashboard_system</name>
  <version>1.0.0</version>
  <description>
    AVS Robot Control Center — Full-stack ROS 2 Humble dashboard system for
    operating, monitoring, controlling, logging, and comparing controllers
    for the AVS autonomous robot (Raspberry Pi 5 / micro-ROS / ESP32-S3).
    Provides WebSocket-based realtime dashboard, cmd_vel mux, experiment
    recorder/analyzer, process manager, and Gazebo simulation manager.
  </description>

  <maintainer email="avs@robot.local">AVS Team</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 runtime deps -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>example_interfaces</depend>

  <!-- Python deps (installed via pip in environment) -->
  <!-- aiohttp, psutil, matplotlib, numpy, pyyaml -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
