<?xml version="1.0"?>
<package format="3">
  <name>avs_controlsystem</name>
  <version>0.0.0</version>
  <description>AVS control system for lane following</description>
  <maintainer email="avs@example.com">avs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
